# Policies-and-Descriptors

./: README.md  cashflow_2.json  cashflow_4.json  cashflow_8.json  cashflow_9.json  customer_risk_10.json  customer_risk_2.json  customer_risk_7.json  ecommerce_10.json  ecommerce_3.json  ecommerce_4.json  ecommerce_5.json  ecommerce_6.json  ecommerce_7.json  ecommerce_8.json  employees_10.json  employees_2.json  employees_6.json  employees_7.json  employees_8.json
llm_policy_evaluator-main/llm-evaluator/: Dockerfile  interface-specification.yml  mypy.ini  pyproject.toml  server_start.sh
llm_policy_evaluator-main/llm-evaluator/config/: generator.yaml
llm_policy_evaluator-main/llm-evaluator/docs/: docker.md  opentelemetry.md
llm_policy_evaluator-main/llm-evaluator/src/: api.py  generator_factory.py  llm_config.py  llm_evaluator.py  main.py  models.py
llm_policy_evaluator-main/llm-evaluator/src/template/: tmp_basic.py  tmp_lmstudio.py
llm_policy_evaluator-main/llm-evaluator/src/utility/: json_utils.py  logger.py  unit_converter.py
llm_policy_evaluator-main/llm-evaluator/tests/: conftest.py  test_api.py  test_generator_factory.py  test_llm_evaluator.py
llm_policy_evaluator-main/llm-evaluator/tests/integration/: test_policy_evaluator.py
llm_policy_evaluator-main/llm-evaluator/tests/integration/csv/: test_4000_pair.csv
llm_policy_evaluator-main/llm-evaluator/tests/integration/policies/: Policy_10_1.txt  Policy_10_10.txt  Policy_10_5.txt  Policy_10_6.txt  Policy_10_7.txt  Policy_10_8.txt  Policy_10_9.txt  Policy_1_10.txt  Policy_1_2.txt  Policy_1_5.txt  Policy_1_8.txt  Policy_2_1.txt  Policy_2_10.txt  Policy_2_4.txt  Policy_2_5.txt  Policy_2_6.txt  Policy_2_7.txt  Policy_2_8.txt  Policy_3_1.txt  Policy_3_4.txt  Policy_3_5.txt  Policy_3_7.txt  Policy_4_3.txt  Policy_4_5.txt  Policy_4_6.txt  Policy_4_9.txt  Policy_5_10.txt  Policy_5_3.txt  Policy_5_4.txt  Policy_5_8.txt  Policy_5_9.txt  Policy_6_10.txt  Policy_6_4.txt  Policy_6_6.txt  Policy_6_7.txt  Policy_7_10.txt  Policy_7_2.txt  Policy_7_6.txt  Policy_7_9.txt  Policy_8_1.txt  (+11 more)
llm_policy_evaluator-main/llm-evaluator/tests/integration/scripts/: run-tests.cmd
(+125 files in other folders)
